# kragg

./: .gitignore  AGENTS.md  CRITICALITY.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
.kragg/: mutants.baseline
src/crag/: __init__.py  __main__.py  brief.py  catalog.py  changes.py  check.py  cli.py  environment.py  hooks.py  journal.py  mapping.py  models.py  parsers.py  policy.py  report.py  runner.py  scaffold.py  templates.py
src/crag/gates/: __init__.py  architecture.py  critical_tests.py  criticality.py  secrets.py  test_quality.py  type_complexity.py
src/kragg/: __init__.py  __main__.py  brief.py  catalog.py  changes.py  check.py  cli.py  commands.py  coverage.py  critical.py  environment.py  flaky.py  globs.py  hooks.py  journal.py  mapping.py  models.py  mutation.py  naming.py  parsers.py  policy.py  report.py  runner.py  scaffold.py  spec.py  templates.py
src/kragg/gates/: __init__.py  architecture.py  critical_coverage.py  critical_tests.py  criticality.py  forbidden_calls.py  halstead.py  nullable_default.py  secret_default.py  secrets.py  sources.py  suppress.py  test_quality.py  typing_strictness.py
tests/: test_architecture.py  test_brief.py  test_changes.py  test_check_pipeline.py  test_cli.py  test_coverage.py  test_critical.py  test_critical_coverage.py  test_critical_tests.py  test_criticality.py  test_environment.py  test_flaky.py  test_forbidden_calls.py  test_hooks.py  test_journal.py  test_mapping.py  test_mutation.py  test_nullable_default.py  test_parsers.py  test_policy.py  test_report.py  test_scaffold.py  test_secret_default.py  test_secrets.py  test_spec.py  test_test_quality.py  test_type_complexity.py  test_typing_strictness.py
