[project]
name = "kragg"
version = "0.8.0"
description = "Agent-first guardrails framework for AI-assisted Python projects"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Torta Studios, LLC", email = "tech@tortastudios.com" },
]
maintainers = [
    { name = "Torta Studios, LLC", email = "tech@tortastudios.com" },
]
keywords = [
    "guardrails",
    "ai",
    "agents",
    "code-quality",
    "linting",
    "scaffolding",
    "claude-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

dependencies = [
    "bandit>=1.8.3",
    "deptry>=0.24.0",
    "detect-secrets>=1.5.0",
    "mypy>=1.19.1",
    "networkx>=3.4.2",
    "pip-audit>=2.9.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.15.5",
    "vulture>=2.15",
]

[project.urls]
Homepage = "https://tortastudios.com"
Repository = "https://github.com/tortastudios/kragg"
Issues = "https://github.com/tortastudios/kragg/issues"

[project.scripts]
kragg = "kragg.cli:main"

[dependency-groups]
dev = [
    "cosmic-ray>=8.4.6",
    "hypothesis>=6.155.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kragg"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "S",
    "I",
    "C90",
    "N",
    "UP",
]
ignore = [
    "S101",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "radon.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.kragg]
profile = "strict-ai-python"
source_paths = ["src"]
test_paths = ["tests"]
coverage_fail_under = 80
type_max_nesting_depth = 2
type_max_length = 40

[tool.kragg.forbidden_calls]
"subprocess.run" = "run external commands through kragg.runner.run_command"
